--- a/frontend/src/components/products/Products.css
+++ b/frontend/src/components/products/Products.css
@@ -5,12 +5,24 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 1rem;
-    background-color: rgb(125, 201, 176);
+    background: linear-gradient(to right, #981491b1, #981449ca, #981755b6);
     font-weight: 800;
+    font-size: 1.2rem;
 }
 
 
 .products{
     border: black 1px solid;
+    border-radius: 10px;
+    margin: 1rem;
     padding: 1rem;
+    background: linear-gradient(to right, #98142e84, #98143c9b, #98173591);
+    font-weight: 800;
+    width: 35vw;
+}
+
+.products:hover{
+    background-color: rgb(240, 233, 233);
+    margin: 3rem;
+    scale: 1.1;
 }
